--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
                 <button id="boombutton">
                     <audio id="boom" src="/sounds/boom.wav">
                     </audio>
-                    <h3>Press A or click for Boom</h3>
+                    <h3>Boom: <br> Press A or click here </h3>
                 </button>
 
 
                 <button id="clapbutton">
                     <audio id="clap" src="/sounds/clap.wav">
                     </audio>
-                    <h3>Press S or click for Clap</h3>
+                    <h3>Clap: Press S or click here</h3>
                 </button>
 
                 <button id="hihatbutton">
                     <audio id="hihat" src="/sounds/hihat.wav">
                     </audio>
-                    <h3>Press D or click for Hihat</h3>
+                    <h3>Hihat: Press D or click here</h3>
                 </button>
             </div>
             <div class="secondButtons">
@@ -36,20 +36,23 @@
                 <button id="kickbutton">
                     <audio id="kick" src="/sounds/kick.wav">
                     </audio>
-                    <h3>Press F or click for Kick</h3>
+                    <h3>Kick: Press F or click here</h3>
                 </button>
 
                 <button id="openhatbutton">
                     <audio id="openhat" src="/sounds/openhat.wav">
                     </audio>
-                    <h3>Press G or click for Open Hat</h3>
+                    <h3>
+                        Open Hat:
+                        Press G or click here
+                    </h3>
                 </button>
 
 
                 <button id="ridebutton">
                     <audio id="ride" src="/sounds/ride.wav">
                     </audio>
-                    <h3>Press H or click for Ride Button</h3>
+                    <h3>Ride: Press H or click here</h3>
                 </button>
 
             </div>
@@ -59,20 +62,20 @@
                 <button id="snarebutton">
                     <audio id="snare" src="/sounds/snare.wav">
                     </audio>
-                    <h3>Press J or click for Snare</h3>
+                    <h3>Snare: Press J or click here</h3>
                 </button>
 
                 <button id="tinkbutton">
                     <audio id="tink" src="/sounds/tink.wav">
                     </audio>
-                    <h3>Press K or click for Tink</h3>
+                    <h3>Tink: Press K or click here</h3>
                 </button>
 
 
                 <button id="tombutton">
                     <audio id="tom" src="/sounds/tom.wav">
                     </audio>
-                    <h3>Press L or click for Tom</h3>
+                    <h3>Tom: Press L or click here</h3>
                 </button>
 
 
@@ -81,7 +84,7 @@
             </div>
         </div>
         <div class="drums">
-            <img id="drumsimage"src="./drumkit.png" alt="black and white illustrtion of a drumkit">
+            <img id="drumsimage" src="./drumkit.png" alt="black and white illustrtion of a drumkit">
         </div>
 
 
