updated html with relative file paths

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         <div class="buttons">
             <div class="firstButtons">
                 <button id="boombutton">
-                    <audio id="boom" src="/sounds/boom.wav">
+                    <audio id="boom" src="/.sounds/boom.wav">
                     </audio>
                     <h3>Boom: <br> Press A or click here </h3>
                 </button>
 
 
                 <button id="clapbutton">
-                    <audio id="clap" src="/sounds/clap.wav">
+                    <audio id="clap" src="./sounds/clap.wav">
                     </audio>
                     <h3>Clap: Press S or click here</h3>
                 </button>
 
                 <button id="hihatbutton">
-                    <audio id="hihat" src="/sounds/hihat.wav">
+                    <audio id="hihat" src="./sounds/hihat.wav">
                     </audio>
                     <h3>Hihat: Press D or click here</h3>
                 </button>
@@ -34,13 +34,13 @@
             <div class="secondButtons">
 
                 <button id="kickbutton">
-                    <audio id="kick" src="/sounds/kick.wav">
+                    <audio id="kick" src="./sounds/kick.wav">
                     </audio>
                     <h3>Kick: Press F or click here</h3>
                 </button>
 
                 <button id="openhatbutton">
-                    <audio id="openhat" src="/sounds/openhat.wav">
+                    <audio id="openhat" src="./sounds/openhat.wav">
                     </audio>
                     <h3>
                         Open Hat:
@@ -50,7 +50,7 @@
 
 
                 <button id="ridebutton">
-                    <audio id="ride" src="/sounds/ride.wav">
+                    <audio id="ride" src="./sounds/ride.wav">
                     </audio>
                     <h3>Ride: Press H or click here</h3>
                 </button>
@@ -60,20 +60,20 @@
             <div class="thirdButtons">
 
                 <button id="snarebutton">
-                    <audio id="snare" src="/sounds/snare.wav">
+                    <audio id="snare" src="./sounds/snare.wav">
                     </audio>
                     <h3>Snare: Press J or click here</h3>
                 </button>
 
                 <button id="tinkbutton">
-                    <audio id="tink" src="/sounds/tink.wav">
+                    <audio id="tink" src="./sounds/tink.wav">
                     </audio>
                     <h3>Tink: Press K or click here</h3>
                 </button>
 
 
                 <button id="tombutton">
-                    <audio id="tom" src="/sounds/tom.wav">
+                    <audio id="tom" src="./sounds/tom.wav">
                     </audio>
                     <h3>Tom: Press L or click here</h3>
                 </button>
